add nachosui and nativebase

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
-    "@material-ui/core": "^3.9.3",
     "expo": "^32.0.0",
+    "nachos-ui": "^0.2.0-beta.1",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.0.9"
